Run PrioritizedTaskRunner tasks with the same priority in posting order

What:
If two tasks have the same priority, they should run in posting order.

A second thing this CL does is fix a race in the unittests. I meant to block
the task runner before queueing up requests but failed to. Fixed here.

Why:
This can prevent hypothetical task starvation. It's also necessary for the
SimpleCachePrioritization control group to ensure that we maintain old
behavior.

Bug: 850085
Change-Id: I1f259296604bf04ea33ecbee9ad3180f064c4266
Reviewed-on: https://chromium-review.googlesource.com/1088759
Commit-Queue: Josh Karlin <jkarlin@chromium.org>
Reviewed-by: Maks Orlovich <morlovich@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564933}
Former-commit-id: 413675e9b667e07ae84a115268abedfdb7430740